unpackaged/main/default/objects/Booking_Audit__c/Booking_Audit__c.object-meta.xml
<CustomObject>
    <label>Booking Audit</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Booking Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Audits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>