unpackaged/main/default/objects/Booking_Audit__c/fields/Days_Since_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Close_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)-Opportunity__r.Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>