unpackaged/main/default/objects/Booking_Audit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booking Audits</relationshipLabel>
    <relationshipName>Booking_Audits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>